Actualització de la versió alpha. A partir d'aquí comença la beta.
He canviat el logo, un parell de errors i la foto per defecte del giny.

--- a/app/src/main/res/xml/widget_info.xml
+++ b/app/src/main/res/xml/widget_info.xml
@@ -5,6 +5,6 @@
         android:updatePeriodMillis="1"
     android:initialLayout="@layout/widget_layout"
     android:resizeMode="horizontal|vertical"
-    android:previewImage="@drawable/denmark"
+    android:previewImage="@drawable/hour"
     android:widgetCategory="home_screen">
 </appwidget-provider>
