--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,43 +6,28 @@
         android:background="#5F9EA0">
 
     <LinearLayout
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:gravity="center"
-            android:orientation="vertical">
-
-        <AnalogClock
-                android:id="@+id/analogClock"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="25dp"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
         <TextView
-                android:id="@+id/secondsTextView"
+                android:id="@+id/currentTimeTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:gravity="center"
+                android:textSize="25sp"
                 android:textColor="#FFFFFF"/>
-
     </LinearLayout>
 
-    <TextView
-            android:id="@+id/currentTimeTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="25sp"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:layout_gravity="top"
-            android:layout_marginStart="22dp"
-            android:layout_marginEnd="22dp"/>
+    <AnalogClock
+            android:id="@+id/analogClock"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginBottom="100dp"/>
 
-    <View
-            android:layout_width="match_parent"
-            android:layout_height="200dp"/>
-    <!--
         <TextClock
-            android:layout_marginBottom="16dp"
             android:id="@+id/digitalClock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,5 +36,4 @@
             android:textColor="#FFFFFF"
             android:format24Hour="HH:mm:ss"
             android:format12Hour="hh:mm:ss" />
-    -->
 </LinearLayout>
