--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,5 @@
             android:textSize="50sp"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
-            android:format24Hour="HH:mm:ss"
-            android:format12Hour="hh:mm:ss"/>
+            android:format24Hour="HH:mm:ss"/>
 </LinearLayout>
